[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/themes/theme1.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Init/Init.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
position = Vector2( 249, 10 )

[node name="MC" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -10.0
margin_right = 390.0
margin_bottom = 350.0
theme = ExtResource( 1 )

[node name="BackgroundForFocusClick" type="TextureButton" parent="MC"]
margin_right = 640.0
margin_bottom = 360.0

[node name="HC" type="HBoxContainer" parent="MC"]
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 2 )

[node name="VC1" type="VBoxContainer" parent="MC/HC"]
margin_right = 318.0
margin_bottom = 360.0
size_flags_horizontal = 3

[node name="YourIPHelpText" type="RichTextLabel" parent="MC/HC/VC1"]
margin_right = 318.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 220 )
rect_pivot_offset = Vector2( 38.8145, 15.1534 )
size_flags_vertical = 3
text = "To start a game and for others to join the game:

1) Connect to same network (e.g. wifi)

2) Select an IP on the list, probably starting with \"192.168.\"

3) \"Create game as server\"

4) They write your IP in their \"Join IP\" and joins the game
"

[node name="Message" type="RichTextLabel" parent="MC/HC/VC1"]
light_mask = 525825
margin_top = 224.0
margin_right = 318.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VC2" type="VBoxContainer" parent="MC/HC"]
margin_left = 322.0
margin_right = 640.0
margin_bottom = 360.0
size_flags_horizontal = 3

[node name="YourIP" type="RichTextLabel" parent="MC/HC/VC2"]
margin_right = 318.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 38.8145, 15.1534 )
text = "Your LAN IPs:"

[node name="LanIPs" type="ItemList" parent="MC/HC/VC2"]
margin_top = 24.0
margin_right = 318.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 80 )
size_flags_vertical = 3

[node name="CreateGame" type="Button" parent="MC/HC/VC2"]
margin_top = 108.0
margin_right = 318.0
margin_bottom = 180.0
size_flags_vertical = 3
text = "Create game as server"

[node name="HC" type="HBoxContainer" parent="MC/HC/VC2"]
margin_top = 184.0
margin_right = 318.0
margin_bottom = 207.0

[node name="JoinIP" type="RichTextLabel" parent="MC/HC/VC2/HC"]
margin_right = 104.0
margin_bottom = 23.0
rect_min_size = Vector2( 0, 20 )
rect_pivot_offset = Vector2( 69.629, 59.4518 )
size_flags_horizontal = 3
text = "Join IP:"

[node name="SetIPto127" type="Button" parent="MC/HC/VC2/HC"]
margin_left = 108.0
margin_right = 211.0
margin_bottom = 23.0
size_flags_vertical = 3
text = "Set to 127..."

[node name="SetIPto192" type="Button" parent="MC/HC/VC2/HC"]
margin_left = 215.0
margin_right = 318.0
margin_bottom = 23.0
size_flags_vertical = 3
text = "Set to 192..."

[node name="IP" type="TextEdit" parent="MC/HC/VC2"]
margin_top = 211.0
margin_right = 318.0
margin_bottom = 283.0
rect_pivot_offset = Vector2( 128, 29 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JoinGame" type="Button" parent="MC/HC/VC2"]
margin_top = 287.0
margin_right = 318.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Join game"
[connection signal="pressed" from="MC/HC/VC2/CreateGame" to="MC/HC" method="_on_CreateGame_pressed"]
[connection signal="pressed" from="MC/HC/VC2/HC/SetIPto127" to="MC/HC" method="_on_SetIPto127_pressed"]
[connection signal="pressed" from="MC/HC/VC2/HC/SetIPto192" to="MC/HC" method="_on_SetIPto192_pressed"]
[connection signal="pressed" from="MC/HC/VC2/JoinGame" to="MC/HC" method="_on_JoinGame_pressed"]
